half completed of first section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap" rel="stylesheet">
     <title>Hasan | MERN Stack Web Developer</title>
 </head>
 <body>
-    
+<section id="first-section">
+    <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1><span class="name-highlight">Habibul Hasan</span> Site</h1>
+        <h3>Professional Web Developer</h3>
+        <p>I want to become a successfull web developer because I want to become a self established persion in my life. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+    </div>
+    <div class="half-width">
+        <img src="images/ethun.png" alt="">
+    </div>
+</section>
 </body>
 </html>
