--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
         <h1><span class="name-highlight">Habibul Hasan</span> Site</h1>
         <h3>Professional Web Developer</h3>
         <p>I want to become a successfull web developer because I want to become a self established persion in my life. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+        <a href="https://facebook.com/ethun.plan/" target="_blank">Hire Me</a>
     </div>
     <div class="half-width">
         <img src="images/ethun.png" alt="">
+    </div>
+</section>
+<section id="dream-area">
+    <div class="half-width">
+        <img src="images/ethun2.png" alt="">
+    </div>
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a Web Developer</h3>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics..</p>
+        <a href="https://facebook.com/ethun.plan/" target="_blank">Download Resume</a>
     </div>
 </section>
 </body>
